# Bootcamp-Python

./: README.md
01. Primeiros Passos/: ConversaoTipos.py  VariaveisConstantes.py
02. Dominando Python - Operadores/: Associacao.py  Atribuicao.py  Comparacao.py  Identidade.py
03. Estruturas/: Condicionais.py  Repeticao.py
04. Strings/: Fatiamento.py  MultiplasLinhas.py
05. Listas/: AulaUm.py  Metodos.py
Banco de Dados/: conexao.py  meu_banco.db
Banco de Dados/01. Introdução/: conexao.py  meu_banco.db
Construindo uma API/API TDD/: pyproject.toml
Construindo uma API/API TDD/store/: main.py
Construindo uma API/API TDD/tests/: conftest.py
Construindo uma API/API Workout/: Makefile
Construindo-uma-API/workout_api/: main.py
Desafios/: SistemaBancario.py  SistemaBancario2.py  teste.py
Desafios/Módulo 1/: SistemaBancario2.py
Desafios/Módulo 2/: Datas.py  README.md  SistemaBancarioAtualizado.py  SistemaBancarioPOO.py  Teste.py
Dominando Python/02. Operadores/: Aritmeticos.py  Logicos.py
Dominando Python/03. Estruturas/: Identacao.py
Dominando Python/04. Strings/: InterpolacaoVariaveis.py  Manipulacao.py
Dominando Python/06. Dicionários/: dicionarios.py  metodos.py
Dominando Python/07. Funções/: parteDois.py  parteUm.py
Orientação a Objetos/01. Introdução à POO com Python/: ClassesObjetos.py  ConstrutoresDestrutores.py  tempCodeRunnerFile.py
Orientação a Objetos/02. Herança/: Conceito.py  Multipla.py  Simples.py
Orientação a Objetos/03. Encapsulamento/: Conceito.py  Propriedades.py
Primeiros Passos/: InputOutput.py  ModoInterativo.py
(+34 files in other folders)
