[tool.poetry]
name = "api tdd"
version = "0.0.1"
description = ""
authors = ["Pedro Henrique Rebechi <pedrohenriquerebechi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
motor = "^3.5.1"
pytest = "^8.3.2"
asyncio = "^3.4.3"
pre-commit = "^3.8.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
